--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Theme.MovieTicket" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
@@ -21,5 +21,9 @@
 
 <!--        <item name="android:fitsSystemWindows">true</item>-->
         <item name="android:statusBarColor">@android:color/transparent</item>
+    </style>
+    <style name="TabLayoutTextStyle">
+        <item name="android:textSize">@dimen/text_regular_3x</item>
+        <item name="android:textStyle">bold</item>
     </style>
 </resources>
