--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -28,4 +28,6 @@
     <dimen name="text_big">40sp</dimen>
     <dimen name="text_big_2x">60sp</dimen>
     <dimen name="text_big_3x">80sp</dimen>
+    <dimen name="drawer_header_height">60dp</dimen>
+    <dimen name="drawer_header_image_size">60dp</dimen>
 </resources>
