--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:background="@color/colorPrimary"
-    tools:context=".ui.WelcomeActivity">
+    tools:context=".ui.activity.WelcomeActivity">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/ivMain"
