--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="secondaryTextBlackColor">#80000000</color>
     <color name="colorAccent">#623EEA</color>
     <color name="transparent">@android:color/transparent</color>
+    <color name="yellow">#e7b943</color>
 </resources>
