--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -30,4 +30,5 @@
     <dimen name="text_big_3x">80sp</dimen>
     <dimen name="drawer_header_height">60dp</dimen>
     <dimen name="drawer_header_image_size">60dp</dimen>
+    <dimen name="height_btn_getTicket">70dp</dimen>
 </resources>
