--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -31,4 +31,5 @@
     <dimen name="drawer_header_height">60dp</dimen>
     <dimen name="drawer_header_image_size">60dp</dimen>
     <dimen name="height_btn_getTicket">70dp</dimen>
+    <dimen name="width_combo_set_amount">120dp</dimen>
 </resources>
