--- a/app/src/main/res/drawable/background_movie_seat_empty.xml
+++ b/app/src/main/res/drawable/background_movie_seat_empty.xml
@@ -4,6 +4,6 @@
 
     <corners android:topRightRadius="10dp"
         android:topLeftRadius="10dp"/>
-    <solid android:color="@color/secondaryTextBlackColor"/>
+    <solid android:color="@color/transparent"/>
 
 </shape>
