--- a/app/src/main/res/layout/activity_choose_movie_time.xml
+++ b/app/src/main/res/layout/activity_choose_movie_time.xml
@@ -15,15 +15,16 @@
         android:scaleType="centerCrop"
         app:srcCompat="@drawable/ic_outline_chevron_left_black_24"
         app:tint="@color/white" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvDay"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@id/ivBack"
-        tools:listitem="@layout/view_holder_day"
+        android:layout_marginTop="@dimen/margin_medium_2"
         android:orientation="horizontal"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        android:layout_marginTop="@dimen/margin_medium_2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        tools:listitem="@layout/view_holder_day" />
     <RelativeLayout
         android:layout_below="@id/rvDay"
         android:layout_width="match_parent"
