--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -94,6 +94,7 @@
         android:includeFontPadding="true"
         android:paddingStart="@dimen/margin_medium"
         android:paddingEnd="@dimen/margin_medium_2"
+        android:inputType="phone"
         android:paddingBottom="20dp"
         android:textSize="@dimen/text_regular_2x" />
 
