--- a/app/src/main/res/layout/activity_choose_movie_seats_activity.xml
+++ b/app/src/main/res/layout/activity_choose_movie_seats_activity.xml
@@ -18,9 +18,8 @@
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/ivBack"
-                android:layout_width="@dimen/margin_xxlarge"
-                android:layout_height="@dimen/margin_xxlarge"
-                android:layout_marginTop="?actionBarSize"
+                android:layout_width="@dimen/margin_xlarge"
+                android:layout_height="@dimen/margin_xlarge"
                 android:scaleType="centerCrop"
                 app:srcCompat="@drawable/ic_outline_chevron_left_black_24" />
 
@@ -32,7 +31,7 @@
                 android:layout_centerHorizontal="true"
                 android:text="Detective Pikachu"
                 android:textColor="@color/black"
-                android:textSize="@dimen/text_heading_1x"
+                android:textSize="@dimen/text_regular_3x"
                 android:textStyle="bold"
                 app:fontFamily="@font/montserrat_medium" />
 
@@ -44,8 +43,8 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="@dimen/margin_small"
                 android:text="Galaxy Cinema - Golden City"
-                android:textColor="@color/secondaryTextBlackColor"
-                android:textSize="@dimen/text_regular"
+                android:textColor="@color/colorGrey"
+                android:textSize="@dimen/text_regular_2x"
                 app:fontFamily="@font/montserrat_medium" />
 
             <androidx.appcompat.widget.AppCompatTextView
@@ -102,7 +101,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginStart="@dimen/margin_medium_2"
+                    android:layout_marginStart="@dimen/margin_medium"
                     android:layout_toEndOf="@id/vAvailable"
                     android:text="Available"
                     android:textColor="@color/secondaryTextBlack30Color"
@@ -123,7 +122,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginStart="@dimen/margin_medium_2"
+                    android:layout_marginStart="@dimen/margin_medium"
                     android:layout_toEndOf="@id/vReserved"
                     android:text="Reserved"
                     android:textColor="@color/secondaryTextBlack30Color"
@@ -144,7 +143,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginStart="@dimen/margin_medium_2"
+                    android:layout_marginStart="@dimen/margin_medium"
                     android:layout_toEndOf="@id/vSelection"
                     android:text="Your Selection"
                     android:textColor="@color/secondaryTextBlack30Color"
@@ -170,9 +169,8 @@
                 android:layout_marginTop="@dimen/margin_medium_3"
                 android:text="Tickets"
                 android:textColor="@color/secondaryTextBlack30Color"
-                android:textSize="@dimen/text_regular_2x"
                 android:textStyle="bold"
-                app:fontFamily="@font/montserrat_medium" />
+                app:fontFamily="@font/montserrat_regular" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tvTicket"
@@ -183,9 +181,8 @@
                 android:layout_alignParentEnd="true"
                 android:layout_marginTop="@dimen/margin_medium_3"
                 android:layout_marginEnd="@dimen/margin_medium_3"
-                android:text="2"
+                android:text="0"
                 android:textColor="@color/secondaryTextBlackColor"
-                android:textSize="@dimen/text_regular_3x"
                 app:fontFamily="@font/montserrat_light" />
 
             <androidx.appcompat.widget.AppCompatTextView
@@ -197,9 +194,8 @@
                 android:layout_marginTop="@dimen/margin_medium_3"
                 android:text="Seats"
                 android:textColor="@color/secondaryTextBlack30Color"
-                android:textSize="@dimen/text_regular_2x"
                 android:textStyle="bold"
-                app:fontFamily="@font/montserrat_medium" />
+                app:fontFamily="@font/montserrat_regular" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tvSeats"
@@ -210,9 +206,8 @@
                 android:layout_alignParentEnd="true"
                 android:layout_marginTop="@dimen/margin_medium_3"
                 android:layout_marginEnd="@dimen/margin_medium_3"
-                android:text="D Row/ 5,6"
+                android:text="-"
                 android:textColor="@color/secondaryTextBlackColor"
-                android:textSize="@dimen/text_regular"
                 app:fontFamily="@font/montserrat_light" />
         </RelativeLayout>
     </androidx.core.widget.NestedScrollView>
