--- a/app/src/main/res/layout/view_holder_movie_seat.xml
+++ b/app/src/main/res/layout/view_holder_movie_seat.xml
@@ -4,10 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginStart="@dimen/margin_medium"
     android:background="@drawable/background_movie_seat_taken"
-    android:layout_marginTop="@dimen/margin_medium"
-    android:layout_marginBottom="@dimen/margin_medium"
-    app:layout_goneMarginStart="0dp"
-    android:layout_marginEnd="0dp"
+    android:layout_marginHorizontal="@dimen/margin_small"
+    android:layout_marginVertical="@dimen/margin_medium"
     android:layout_height="@dimen/margin_large">
 
     <androidx.appcompat.widget.AppCompatTextView
