--- a/app/src/main/res/layout/activity_choose_movie_seats_activity.xml
+++ b/app/src/main/res/layout/activity_choose_movie_seats_activity.xml
@@ -12,9 +12,9 @@
         android:layout_above="@id/btnBuyTicket">
 
         <RelativeLayout
-            android:layout_marginBottom="@dimen/margin_medium_2"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginBottom="@dimen/margin_medium_2">
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/ivBack"
