--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -63,8 +63,10 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:layout_width="match_parent"
         app:behavior_overlapTop="@dimen/margin_xlarge"
+        android:layout_marginBottom="@dimen/margin_xxlarge"
         android:background="@drawable/background_view_corner"
         android:layout_height="match_parent">
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
