--- a/app/src/main/res/layout/activity_awesome.xml
+++ b/app/src/main/res/layout/activity_awesome.xml
@@ -18,6 +18,7 @@
             android:id="@+id/ivBack"
             android:layout_width="@dimen/margin_xlarge"
             android:layout_height="@dimen/margin_xlarge"
+            android:layout_margin="@dimen/margin_medium"
             android:scaleType="centerCrop"
             app:srcCompat="@drawable/ic_round_clear_24" />
 
