--- a/app/src/main/res/layout/activity_choose_movie_seats_activity.xml
+++ b/app/src/main/res/layout/activity_choose_movie_seats_activity.xml
@@ -19,6 +19,7 @@
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/ivBack"
                 android:layout_width="@dimen/margin_xlarge"
+                android:layout_margin="@dimen/margin_medium_2"
                 android:layout_height="@dimen/margin_xlarge"
                 android:scaleType="centerCrop"
                 app:srcCompat="@drawable/ic_outline_chevron_left_black_24" />
