--- a/app/src/main/res/layout/activity_choose_movie_time.xml
+++ b/app/src/main/res/layout/activity_choose_movie_time.xml
@@ -59,9 +59,9 @@
             android:layout_marginTop="@dimen/text_regular_3x"
             android:clipToPadding="false"
             android:orientation="vertical"
-            tools:listitem="@layout/view_holder_movie_time"
             android:paddingEnd="@dimen/margin_medium_2"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/view_holder_movie_time" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnNext"
