--- a/app/src/main/res/layout/view_holder_day.xml
+++ b/app/src/main/res/layout/view_holder_day.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:text="We"
-        android:fontFamily="@font/montserrat_light"
+        android:fontFamily="@font/roboto_regular"
         android:textSize="@dimen/text_regular_2x" />
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -22,5 +22,6 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/margin_medium"
         android:text="10"
+        android:fontFamily="@font/roboto_regular"
         android:textSize="@dimen/text_regular_2x" />
 </RelativeLayout>
