--- a/app/src/main/res/layout/view_holder_movie_time_item.xml
+++ b/app/src/main/res/layout/view_holder_movie_time_item.xml
@@ -12,7 +12,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="@dimen/margin_medium_2"
         android:backgroundTint="@color/white"
-        android:fontFamily="@font/montserrat_medium"
+        android:fontFamily="@font/roboto_regular"
         android:gravity="center"
         android:insetLeft="0dp"
         android:insetTop="0dp"
@@ -21,7 +21,6 @@
         android:padding="0dp"
         android:text="5:30 AM"
         android:textColor="@color/black"
-        android:textSize="@dimen/text_regular"
         android:textStyle="bold"
         app:cornerRadius="10dp"
         app:strokeColor="@color/secondaryTextBlackColor"
